--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -195,6 +195,7 @@
     <dimen name="TextSize14">14sp</dimen>
     <dimen name="TextSize15">15sp</dimen>
     <dimen name="TextSize16">16sp</dimen>
+    <dimen name="TextSize18">18sp</dimen>
 
 
     <dimen name="tsr_root_padding">5dp</dimen>
