--- a/app/src/main/res/drawable/curve_background.xml
+++ b/app/src/main/res/drawable/curve_background.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" android:padding="5dp">
     <!-- you can use any color you want I used here gray color-->
-    <solid android:color="?attr/backgroundColor"/>
+    <solid android:color="@color/theme_background"/>
     <corners android:radius="5dp"/>
 
 </shape>
