--- a/app/src/main/res/drawable/curve_background_error.xml
+++ b/app/src/main/res/drawable/curve_background_error.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" android:padding="5dp">
     <!-- you can use any color you want I used here gray color-->
-    <solid android:color="@color/pin_background"/>
-    <corners android:radius="10dp"/>
+    <solid android:color="#363635"/>
+    <corners android:radius="12dp"/>
 
 </shape>
