--- a/app/src/main/res/layout/kid_pin_popup_layout.xml
+++ b/app/src/main/res/layout/kid_pin_popup_layout.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
@@ -8,120 +7,115 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/transparent_background">
-
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_marginStart="40dp"
             android:layout_centerInParent="true"
-            android:layout_marginEnd="40dp"
-            android:background="@drawable/curve_background">
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
+            android:background="@drawable/curve_background"
+            android:orientation="vertical">
 
             <ImageView
                 android:id="@+id/iv_cross"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="@dimen/_10sdp"
-                android:layout_marginTop="@dimen/_10sdp"
                 android:layout_gravity="end"
-                android:padding="@dimen/_10sdp"
-                android:background="@drawable/cross"/>
+                android:layout_marginTop="@dimen/_10sdp"
+                android:layout_marginEnd="@dimen/_10sdp"
+                android:background="@drawable/cross"
+                android:padding="@dimen/_10sdp" />
 
-                />
             <ImageView
                 android:id="@+id/home_icon_kids"
                 android:layout_width="100dp"
                 android:layout_height="37dp"
                 android:layout_gravity="center"
                 android:background="@drawable/vipa_logo_kids"
-                android:contentDescription="TODO"
-                />
+                android:contentDescription="TODO" />
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:gravity="center"
                 android:layout_marginTop="@dimen/_10sdp"
-                android:text="@string/kids_mode_pin"
                 android:fontFamily="@font/sukhumvittadmai_normal"
+                android:gravity="center"
                 android:singleLine="true"
+                android:text="@string/kids_mode_pin"
                 android:textColor="@color/white_almost_opaque"
+                android:textSize="@dimen/TextSize14" />
 
-                android:textSize="@dimen/TextSize14"/>
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:gravity="center"
                 android:layout_marginTop="@dimen/_7sdp"
-                android:text="@string/kids_mode_pin_set"
                 android:fontFamily="@font/sukhumvittadmai_normal"
+                android:gravity="center"
                 android:singleLine="true"
+                android:text="@string/kids_mode_pin_set"
                 android:textColor="@color/white_almost_opaque"
+                android:textSize="@dimen/TextSize14" />
 
 
-                android:textSize="@dimen/TextSize14"/>
-
-
-
-                <me.vipa.app.view.PinView
-                    android:id="@+id/pinViewNumber"
-                    style="@style/PinWidget.PinView"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:focusable="true"
-                    android:layout_marginTop="@dimen/_10sdp"
-                    android:focusableInTouchMode="true"
-                    android:inputType="number"
-                    android:itemBackground="@drawable/pinview_background_selector"
-                    android:padding="@dimen/_5sdp"
-                    android:textColor="@color/black"
-                    android:textSize="@dimen/_14sdp"
-                    android:textStyle="bold"
-                    app:cursorColor="@color/transparent_background"
-                    app:cursorWidth="2dp"
-                    app:hideLineWhenFilled="false"
-                    app:itemCount="4"
-                    app:itemHeight="@dimen/_35sdp"
-                    app:itemWidth="@dimen/_35sdp"
-                    app:itemRadius="@dimen/_4sdp"
-                    app:itemSpacing="@dimen/_10sdp"
-                    app:lineColor="@color/white_almost_opaque"
-                    app:lineWidth="0dp"
-                    app:viewType="rectangle" />
+            <me.vipa.app.view.PinView
+                android:id="@+id/pinViewNumber"
+                style="@style/PinWidget.PinView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="@dimen/_10sdp"
+                android:focusable="true"
+                android:focusableInTouchMode="true"
+                android:inputType="number"
+                android:itemBackground="@drawable/pinview_background_selector"
+                android:padding="@dimen/_5sdp"
+                android:textColor="@color/black"
+                android:textSize="@dimen/_14sdp"
+                android:textStyle="bold"
+                app:cursorColor="@color/black"
+                app:cursorWidth="2dp"
+                app:hideLineWhenFilled="false"
+                app:itemCount="4"
+                app:itemHeight="@dimen/_35sdp"
+                app:itemRadius="@dimen/_4sdp"
+                app:itemSpacing="@dimen/_10sdp"
+                app:itemWidth="@dimen/_35sdp"
+                app:lineColor="@color/white_almost_opaque"
+                app:lineWidth="0dp"
+                app:viewType="rectangle" />
 
 
             <Button
                 android:id="@+id/bt_continue"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/NontonSize45"
-                android:layout_marginStart="@dimen/_30sdp"
-                android:text="@string/Continue_dialog"
-                android:textColor="@color/white"
-                android:textAllCaps="false"
                 android:layout_gravity="center_vertical"
-                android:fontFamily="@font/sukhumvittadmai_bold"
-                android:textSize="@dimen/suaRegisterText"
+                android:layout_marginStart="@dimen/_30sdp"
+                android:layout_marginTop="@dimen/_20sdp"
                 android:layout_marginEnd="@dimen/_30sdp"
                 android:layout_marginBottom="@dimen/_40sdp"
-                android:layout_marginTop="@dimen/_20sdp"
                 android:background="@drawable/rounded_button"
-                android:gravity="center"/>
-             <!--   <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:fontFamily="@font/sukhumvittadmai_bold"
-                    android:gravity="center_vertical"
-                    android:text="@string/Continue"
-                    android:textColor="@color/white"
-                    android:textSize="@dimen/suaRegisterText" />-->
+                android:fontFamily="@font/sukhumvittadmai_bold"
+                android:gravity="center"
+                android:text="@string/Continue_dialog"
+                android:textAllCaps="false"
+                android:textColor="@color/white"
+                android:textSize="@dimen/suaRegisterText"/>
+            <!--   <TextView
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"
+                   android:layout_gravity="center_vertical"
+                   android:fontFamily="@font/sukhumvittadmai_bold"
+                   android:gravity="center_vertical"
+                   android:text="@string/Continue"
+                   android:textColor="@color/white"
+                   android:textSize="@dimen/suaRegisterText" />-->
 
 
         </LinearLayout>
+
         <me.vipa.app.utils.CustomProgressBar
             android:id="@+id/progress_bar"
             style="@style/Widget.AppCompat.ProgressBar"
@@ -132,7 +126,7 @@
             android:clickable="true"
             android:indeterminate="true"
             android:indeterminateTintMode="src_atop"
-            android:visibility="gone"/>
+            android:visibility="gone" />
 
     </RelativeLayout>
 </layout>
