--- a/brightcovelibrary/src/main/res/values/colors.xml
+++ b/brightcovelibrary/src/main/res/values/colors.xml
@@ -4,6 +4,7 @@
     <color name="black">#000000</color>
     <color name="blue">#2b71e2</color>
     <color name="theme_background">#1a1a1a</color>
+    <color name="pin_background">#1f1f1f</color>
     <color name="black_filter_text">#393939</color>
     <color name="orange_mustard">#e77005</color>
     <color name="ligh_blue">#0ba7ef</color>
