--- a/app/src/main/res/layout/kid_pin_popup_layout.xml
+++ b/app/src/main/res/layout/kid_pin_popup_layout.xml
@@ -96,6 +96,7 @@
                 android:layout_marginTop="@dimen/_20sdp"
                 android:layout_marginEnd="@dimen/_30sdp"
                 android:layout_marginBottom="@dimen/_40sdp"
+                android:enabled="false"
                 android:background="@drawable/rounded_button"
                 android:fontFamily="@font/sukhumvittadmai_bold"
                 android:gravity="center"
