--- a/app/src/main/res/layout/kid_pin_popup_layout.xml
+++ b/app/src/main/res/layout/kid_pin_popup_layout.xml
@@ -47,6 +47,7 @@
                 android:textSize="@dimen/TextSize14" />
 
             <TextView
+                android:id="@+id/tv_setPin"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -54,7 +55,7 @@
                 android:fontFamily="@font/sukhumvittadmai_normal"
                 android:gravity="center"
                 android:singleLine="true"
-                android:text="@string/kids_mode_pin_set"
+                android:text=""
                 android:textColor="@color/white_almost_opaque"
                 android:textSize="@dimen/TextSize14" />
 
@@ -66,9 +67,13 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="@dimen/_10sdp"
+                android:inputType="number"
+
+
+                android:cursorVisible="true"
                 android:focusable="true"
                 android:focusableInTouchMode="true"
-                android:inputType="number"
+
                 android:itemBackground="@drawable/pinview_background_selector"
                 android:padding="@dimen/_5sdp"
                 android:textColor="@color/black"
@@ -96,14 +101,14 @@
                 android:layout_marginTop="@dimen/_20sdp"
                 android:layout_marginEnd="@dimen/_30sdp"
                 android:layout_marginBottom="@dimen/_40sdp"
-                android:enabled="false"
                 android:background="@drawable/rounded_button"
+                android:enabled="false"
                 android:fontFamily="@font/sukhumvittadmai_bold"
                 android:gravity="center"
                 android:text="@string/Continue_dialog"
                 android:textAllCaps="false"
                 android:textColor="@color/white"
-                android:textSize="@dimen/suaRegisterText"/>
+                android:textSize="@dimen/suaRegisterText" />
             <!--   <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
