--- a/app/src/main/res/layout/kid_pin_popup_layout.xml
+++ b/app/src/main/res/layout/kid_pin_popup_layout.xml
@@ -109,6 +109,22 @@
                 android:textAllCaps="false"
                 android:textColor="@color/white"
                 android:textSize="@dimen/suaRegisterText" />
+
+            <TextView
+                android:id="@+id/tv_skip"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end"
+                android:visibility="invisible"
+                android:padding="@dimen/_5sdp"
+                android:fontFamily="@font/sukhumvittadmai_normal"
+                android:text="@string/skip_line"
+                android:textColor="@color/white"
+                android:layout_marginEnd="@dimen/_10sdp"
+                android:layout_marginBottom="@dimen/_10sdp"
+                android:textSize="@dimen/headingToolbar"
+                android:layout_centerInParent="true"
+                />
             <!--   <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
