--- a/app/src/main/res/values-sw600dp-land/dimens.xml
+++ b/app/src/main/res/values-sw600dp-land/dimens.xml
@@ -175,6 +175,7 @@
     <dimen name="NontonSize118">118dp</dimen>
     <dimen name="NontonSize168">168dp</dimen>
     <dimen name="NontonSize177">177dp</dimen>
+    <dimen name="NontonSize190">190dp</dimen>
     <dimen name="NontonSize186">186dp</dimen>
     <dimen name="NontonSize240">240dp</dimen>
     <dimen name="NontonSize133">133dp</dimen>
