--- a/app/src/main/res/values-sw390dp/dimens.xml
+++ b/app/src/main/res/values-sw390dp/dimens.xml
@@ -15,6 +15,7 @@
     <dimen name="NontonSize15">15dp</dimen>
     <dimen name="NontonSize18">18dp</dimen>
     <dimen name="NontonSize20">20dp</dimen>
+    <dimen name="NontonSize190">190dp</dimen>
     <dimen name="NontonSize25">25dp</dimen>
     <dimen name="NontonSize30">30dp</dimen>
     <dimen name="NontonSize28">28dp</dimen>
