--- a/app/src/main/res/layout/detail_screen.xml
+++ b/app/src/main/res/layout/detail_screen.xml
@@ -71,9 +71,8 @@
                     android:id="@+id/playerImage"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:visibility="visible"
                     android:scaleType="fitXY"
-                    />
+                    android:visibility="visible" />
 
 <!--                <ImageView-->
 <!--                    android:id="@+id/play_icon"-->
