--- a/brightcovelibrary/src/main/res/layout/fragment_blank.xml
+++ b/brightcovelibrary/src/main/res/layout/fragment_blank.xml
@@ -8,7 +8,7 @@
 
     <FrameLayout
         android:id="@+id/playerRoot"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="0dp"
         android:background="@color/black"
         android:clickable="false"
@@ -21,8 +21,8 @@
 
         <com.brightcove.player.view.BrightcoveExoPlayerVideoView
             android:id="@+id/brightcove_video_view"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:background="@android:color/black" />
         <androidx.appcompat.widget.AppCompatImageView
             android:layout_width="match_parent"
