--- a/brightcovelibrary/src/main/res/layout/player_seekbar_layout.xml
+++ b/brightcovelibrary/src/main/res/layout/player_seekbar_layout.xml
@@ -6,11 +6,10 @@
               android:orientation="horizontal">
     <TextView
         android:id="@+id/tag"
-        android:layout_width="60dp"
+        android:layout_width="50dp"
         android:layout_height="30dp"
         android:layout_gravity="center"
-        android:layout_marginEnd="10dp"
-        android:layout_marginRight="24dp"
+        android:layout_marginLeft="15dp"
         android:textColor="#FFF"
         android:gravity="center"
         android:textSize="16sp"
