--- a/brightcovelibrary/src/main/res/layout/fragment_blank.xml
+++ b/brightcovelibrary/src/main/res/layout/fragment_blank.xml
@@ -21,7 +21,7 @@
 
         <com.brightcove.player.view.BrightcoveExoPlayerVideoView
             android:id="@+id/brightcove_video_view"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@android:color/black" />
         <androidx.appcompat.widget.AppCompatImageView
