--- a/app/src/main/res/layout/episode_screen.xml
+++ b/app/src/main/res/layout/episode_screen.xml
@@ -53,9 +53,10 @@
             android:orientation="vertical">
 
             <RelativeLayout
+                android:background="@color/black"
                 android:id="@+id/header"
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
+                android:layout_height="wrap_content"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintDimensionRatio="16:9"
@@ -64,7 +65,7 @@
                 <FrameLayout
                     android:id="@+id/player_frame"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                    android:layout_height="wrap_content">
 
                 </FrameLayout>
 
@@ -73,8 +74,7 @@
                     errorImage="@{@drawable/placeholder_landscape}"
                     placeholder="@{@drawable/placeholder_landscape}"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:scaleType="fitXY"
+                    android:layout_height="wrap_content"
                     android:src="@drawable/placeholder_landscape"
                     android:visibility="visible" />
 
@@ -376,42 +376,43 @@
 
                     </LinearLayout>
 
-                        <RelativeLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="@dimen/tab_top_margin"
-                            >
-                            <View
-                                android:background="@color/description_title_yellow"
-                                android:layout_width="match_parent"
-                                android:layout_height="2dp"
-                                />
-                        <com.google.android.material.tabs.TabLayout
-                            android:id="@+id/tabLayout"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="left"
-                            android:layout_marginTop="4dp"
-                            android:layout_marginLeft="@dimen/rail_top_margin"
-                            android:background="?attr/backgroundColor"
-                            android:minHeight="?actionBarSize"
-                            app:tabGravity="fill"
-                            app:tabIndicatorColor="@null"
-                            app:tabIndicatorFullWidth="true"
-                            app:tabMode="fixed"
-                            app:tabSelectedTextColor="?attr/tab_selected"
-                            app:tabTextColor="?attr/tab_text_color"
-                            app:tabTextAppearance="@style/CusromTabText"/>
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/tab_top_margin">
 
-                        <View
-                            android:background="?attr/tab_selected"
-                            android:layout_width="match_parent"
-                            android:layout_alignBottom="@+id/tabLayout"
-                            android:layout_height="0.8dp"
-                            />
+                    <View
+                        android:layout_width="match_parent"
 
-                        </RelativeLayout>
+                        android:layout_height="2dp"
+                        android:background="@color/description_title_yellow"
+                        android:visibility="gone" />
 
+                    <com.google.android.material.tabs.TabLayout
+                        android:id="@+id/tabLayout"
+                        android:layout_width="match_parent"
+
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="left"
+                        android:layout_marginLeft="@dimen/rail_top_margin"
+                        android:layout_marginTop="4dp"
+                        android:background="?attr/backgroundColor"
+                        android:minHeight="?actionBarSize"
+                        android:visibility="gone"
+                        app:tabGravity="fill"
+                        app:tabIndicatorColor="@null"
+                        app:tabIndicatorFullWidth="true"
+                        app:tabMode="fixed"
+                        app:tabSelectedTextColor="?attr/tab_selected"
+                        app:tabTextAppearance="@style/CusromTabText"
+                        app:tabTextColor="?attr/tab_text_color" />
+
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="0.8dp"
+                        android:layout_alignBottom="@+id/tabLayout"
+                        android:background="?attr/tab_selected" />
+                    </RelativeLayout>
                     <me.vipa.app.utils.helpers.WrappingViewPager
                         android:id="@+id/viewPager"
                         android:layout_width="match_parent"
