--- a/app/src/main/res/layout/season_fragment_layout.xml
+++ b/app/src/main/res/layout/season_fragment_layout.xml
@@ -30,14 +30,14 @@
                 android:paddingTop="@dimen/_26sdp"
                 android:paddingBottom="@dimen/_70sdp"
                 android:textColor="@color/moretitlecolor"
-                android:textSize="@dimen/coming_soon_text_size"
-                />
+                android:textSize="@dimen/coming_soon_text_size" />
 
             <LinearLayout
                 android:id="@+id/header_season"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentTop="true">
+                android:layout_alignParentTop="true"
+                android:layout_marginTop="@dimen/season_heading_margin_left">
 
                 <TextView
                     android:id="@+id/season_header"
@@ -78,6 +78,7 @@
                 android:textSize="@dimen/coming_soon_text_size"
                 android:visibility="gone" />
 
+
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/series_recycler_view"
                 android:layout_width="match_parent"
@@ -87,13 +88,14 @@
                 android:nestedScrollingEnabled="false"
                 android:overScrollMode="never" />
 
+
             <ProgressBar
                 android:id="@+id/progress_bar"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
                 android:layout_below="@id/series_recycler_view"
                 android:layout_centerInParent="true"
+                android:layout_gravity="center"
                 android:theme="@style/progressTheme"
                 android:visibility="gone" />
 
@@ -101,14 +103,12 @@
                 android:id="@+id/seasonMore"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_centerInParent="true"
                 android:layout_below="@id/series_recycler_view"
+                android:layout_centerInParent="true"
+                android:layout_gravity="center"
                 android:layout_marginTop="@dimen/NontonSize15"
                 android:background="@drawable/rounded_button"
-                android:gravity="center"
-               >
-
+                android:gravity="center">
 
                 <TextView
                     android:layout_width="wrap_content"
