--- a/brightcovelibrary/src/main/res/layout/fragment_player_controls.xml
+++ b/brightcovelibrary/src/main/res/layout/fragment_player_controls.xml
@@ -61,8 +61,7 @@
                         android:id="@+id/signIcon"
                         android:layout_width="30dp"
                         android:layout_height="30dp"
-                        android:padding="4dp"
-                        />
+                        android:padding="4dp" />
 
                 </RelativeLayout>
 
