chromecast poc wip

--- a/brightcovelibrary/src/main/res/layout/fragment_player_controls.xml
+++ b/brightcovelibrary/src/main/res/layout/fragment_player_controls.xml
@@ -77,6 +77,7 @@
                         android:layout_width="30dp"
                         android:layout_height="30dp"
                         android:mediaRouteTypes="user"
+                        android:visibility="gone"
                         app:mediaRouteButtonTint="@color/white" />
 
                 </RelativeLayout>
