--- a/app/src/main/res/layout-sw600dp-land/more_item.xml
+++ b/app/src/main/res/layout-sw600dp-land/more_item.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -49,7 +50,7 @@
                 android:contentDescription="TODO"
                 android:scaleType="centerInside"
                 android:src="@drawable/verify"
-                android:tint="@color/inspection_color"
+                app:tint="@color/inspection_color"
                 android:visibility="gone" />
 
         </LinearLayout>
