--- a/app/src/main/res/layout/layout_animation_fall_down.xml
+++ b/app/src/main/res/layout/layout_animation_fall_down.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layoutAnimation xmlns:android="http://schemas.android.com/apk/res/android"
+<ViewAnimator xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:animation="@anim/item_animation_fall_down"
