--- a/app/src/main/res/layout/splash.xml
+++ b/app/src/main/res/layout/splash.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.vipa.app.me.vipa.app.activities.splash.ui.ActivitySplash">
+    tools:context=".activities.splash.ui.ActivitySplash">
 
     <ImageView
         android:id="@+id/img_logo"
