--- a/brightcovelibrary/src/main/res/layout-sw720dp-land/fragment_blank.xml
+++ b/brightcovelibrary/src/main/res/layout-sw720dp-land/fragment_blank.xml
@@ -26,6 +26,11 @@
             android:layout_height="match_parent"
             android:background="@android:color/black" />
         <androidx.appcompat.widget.AppCompatImageView
+            android:layout_width="wrap_content"
+            android:id="@+id/iv_watermark"
+            android:background="@drawable/vipa_watermark"
+            android:layout_height="wrap_content"/>
+        <androidx.appcompat.widget.AppCompatImageView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/poster_image"
