--- a/app/src/main/res/layout/activity_series_detail.xml
+++ b/app/src/main/res/layout/activity_series_detail.xml
@@ -222,10 +222,12 @@
                                                 android:textSize="@dimen/font_large"
                                                 tools:targetApi="p" />
 
-
+                                            <LinearLayout
+                                                android:layout_width="match_parent"
+                                                android:layout_height="wrap_content">
                                             <TextView
                                                 android:id="@+id/vod_count"
-                                                android:layout_width="match_parent"
+                                                android:layout_width="wrap_content"
                                                 android:layout_height="wrap_content"
                                                 android:layout_gravity="center_vertical"
                                                 android:layout_marginStart="2dp"
@@ -234,6 +236,15 @@
                                                 android:text=""
                                                 android:textColor="?attr/sub_title"
                                                 android:textSize="@dimen/font_small" />
+                                            <TextView
+                                                android:id="@+id/tv_4k"
+                                                android:layout_width="23dp"
+                                                android:layout_height="15dp"
+                                                android:background="@drawable/image4k"
+                                                android:layout_marginLeft="2dp"
+                                                android:layout_marginTop="2.5dp"
+                                                />
+                                            </LinearLayout>
 
 
                                             <LinearLayout
