--- a/app/src/main/res/layout/detail_screen.xml
+++ b/app/src/main/res/layout/detail_screen.xml
@@ -233,6 +233,14 @@
                                     android:fontFamily="@font/sukhumvittadmai_normal"
                                     android:textColor="?attr/sub_title"
                                     android:textSize="@dimen/font_small" />
+                                <TextView
+                                    android:id="@+id/tv_4k"
+                                    android:layout_width="23dp"
+                                    android:layout_height="15dp"
+                                    android:background="@drawable/image4k"
+                                    android:layout_marginLeft="2dp"
+                                    android:layout_marginTop="2.5dp"
+                                    android:visibility="gone"/>
 
                                 <TextView
                                     android:id="@+id/tv_premium"
